[SCSS] Updated ember-power-select z-indexing issue

--- a/bsrs-ember/app/styles/base/resets.scss
+++ b/bsrs-ember/app/styles/base/resets.scss
@@ -1,19 +1,4 @@
-.selectize-input{
-	border: $borderStyle;
-	border-radius: $borderRadius;
-}
-.selectize-input.focus {
-    border-color: $activeColor;
-    outline: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-	border-radius: $borderRadiusTop;
-}
-.selectize-dropdown, .selectize-dropdown.form-control{
-	margin: -1px 0 0;
-	border-color: $activeColor;
-	border-radius: $borderRadiusBottom;
-}
+
 input, textarea, select, button {
 	outline: none;
 	-webkit-box-shadow: none !important;
@@ -99,7 +84,8 @@ input[type="text"]:disabled {
 		    box-shadow: none;
 			border-radius: $borderRadiusTop;
 			background-image: none !important;
-
+			position: relative;
+			z-index: 1;
 		}
 		input[type="search"] {
 		    display: block;
